# websocket-streaming

./: .env.example  .gitignore  CMakeLists.txt  README.md  VERSION-HISTORY.md  run_streamer.sh  test-sdp-debug.sh  webrtc-streamer.service
docs/: SETUP_GUIDE.md
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/pi_camera_viewer/: MainActivity.kt
flutter_app/android/app/src/main/res/drawable/: ic_launcher.xml
flutter_app/ios/Runner/: Info.plist
flutter_app/lib/: main.dart
flutter_app/lib/screens/: direct_webrtc_screen.dart  home_screen.dart  stream_viewer_screen.dart  web_viewer_screen.dart
flutter_app/lib/services/: webrtc_service.dart
flutter_app/lib/widgets/: connection_status.dart  control_button.dart  ptt_button.dart
include/: cloudflare_turn.h  shared_media_pipeline.h  signaling_client.h  webrtc_stream.h
scripts/: build.sh  install_dependencies.sh  install_services.sh  setup-ubuntu-server.sh  setup_permanent_tunnel.sh  start_all.sh  start_ngrok.sh  start_signaling.sh  start_with_tunnel.sh
signaling/: package.json  server.js
signaling/public/: index.html  simple-test.html
src/: cloudflare_turn.cpp  main.cpp  shared_media_pipeline.cpp  signaling_client.cpp  webrtc_stream.cpp
tests/: MANUAL_TEST_CHECKLIST.md  test_reconnection.sh
web/: index.html
